# milk

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  Locator.cpp  Locator.h  State.cpp  State.h  api.c  api.h  audio.c  audio.h  bitmap.c  bitmap.h  cmd.c  cmd.h  common.h  console.c  console.h  font.c  font.h  gamepad.c  gamepad.h  input.c  input.h  int.h  logs.c  logs.h  luamlib.cpp  luamlib.h  luaopen_milk.cpp  main.c  main.cpp  milk.c  milk.h  milk_api.c  milk_api.h  milk_audio.c  milk_audio.h  milk_bmp.c  milk_bmp.h  milk_export.h  milk_video.c  (+24 more)
src/asset/: AssetCache.h  SceneLoader.h
src/asset/adapter/: ActorJsonDeserializer.h  ActorLoaderAdapter.cpp  ActorLoaderAdapter.h  ActorTemplateCacheAdapter.cpp  ActorTemplateCacheAdapter.h  SceneJsonDeserializer.h  SceneLoaderAdapter.cpp  SceneLoaderAdapter.h  TextureCacheAdapter.cpp  TextureCacheAdapter.h
src/assetcache/adapter/: ActorTemplateCacheAdapter.cpp  ActorTemplateCacheAdapter.h  TextureCacheAdapter.h
src/audio/: AudioCache.h  AudioPlayer.h  AudioState.h  Music.h  MusicCache.h  SampleState.h  Sound.h  SoundCache.h  audio.cpp  audio.h  luaopen_milk_audio.cpp  luaopen_milk_audio.h  sample.h
src/audio/lua/: LuaSound.cpp  LuaSound.h
src/audio/sdl/: SDLAudioCache.cpp  SDLAudioCache.h  SDLAudioPlayer.cpp  SDLAudioPlayer.h  SDLMusicCache.cpp  SDLMusicCache.h  SDLSoundCache.cpp  SDLSoundCache.h  SDLSoundPlayer.cpp  SDLSoundPlayer.h
src/bootstrap/: main.c
src/common/: Alignment.h  Array.h  FastMap.h  HashMap.h  IdGenerator.h  Ids.h  String.h  atomic.h  int.h
src/controller/: controller.cpp  controller.h  luaopen_milk_controller.cpp  luaopen_milk_controller.h
src/core/: Locator.cpp  Locator.h  LuaApi.cpp  LuaApi.h  MilkState.cpp  MilkState.h  lua_extensions.cpp  lua_extensions.h  luamlib.cpp  luamlib.h  run.cpp  run.h
src/data/: Array.h  FastMap.h  HashMap.h  HashTable.h  Ids.cpp  Ids.h  String.h  id.cpp  id.h  int.h  uid.cpp  uid.h
src/debugtools/: DebugTools.cpp  DebugTools.h
src/editor/: cmd.c  cmd.h
src/embed/: font.c  font.h  font.inl
src/filesystem/adapter/: FilesystemAdapter.cpp  FilesystemAdapter.h
src/game/: Game.cpp  Game.h
src/game/binding/: LuaGame.cpp  LuaGame.h
src/game/states/: GameState.h  GameState_Scene.cpp  GameState_Scene.h  GameState_SceneTransition.cpp  GameState_SceneTransition.h
src/graphics/: Animator.h  Color.h  Graphics.cpp  Graphics.h  Image.h  ImageCache.h  Rectangle.h  Renderer.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureCache.h  Tilemap.h  graphics.cpp  graphics.h  image.h  luaopen_milk_graphics.cpp  luaopen_milk_graphics.h
src/graphics/sdl/: SDLImageCache.cpp  SDLImageCache.h  SDLRenderer.cpp  SDLRenderer.h  SDLTextureCache.cpp  SDLTextureCache.h
src/input/: Keyboard.cpp  Keyboard.h  LuaKeyboard.cpp
src/input/binding/: LuaKeyboard.cpp
src/input/lua/: LuaKeyboard.cpp  LuaKeyboard.h
src/input/sdl/: Keyboard.cpp  Keyboard.h  SDLKeyboard.cpp  SDLKeyboard.h
src/joystick/: joystick.cpp  joystick.h  luaopen_milk_joystick.cpp  luaopen_milk_joystick.h
src/keyboard/: Keyboard.h  keyboard.cpp  keyboard.h  luaopen_milk_keyboard.cpp  luaopen_milk_keyboard.h
src/keyboard/sdl/: SDLKeyboard.cpp  SDLKeyboard.h
src/legacy/: audio.c  audio.h  int.h  luamlib.cpp  luaopen_milk.cpp  luaopen_milk.h  milk_graphics_chip.h  uid.h
src/legacy/audio/: audio.cpp
src/legacy/graphics/: graphics.cpp  luaopen_milk_graphics.h
src/legacy/mouse/: mouse.cpp
src/legacy/time/: time.cpp  time.h
src/legacy/window/: luaopen_milk_window.h  window.cpp  window.h
src/lua/: LuaEnvironment.cpp  LuaEnvironment.h  LuaExtensions.h  lua_extensions.cpp  lua_extensions.h
src/lua/adapter/: LuaApi.h  LuaEnvironmentAdapter.cpp  LuaEnvironmentAdapter.h
src/lua/api/: LuaApi.cpp  LuaApi.h  LuaKeyboard.cpp  LuaKeyboard.h  LuaWindow.cpp
src/main/: Locator.h  MilkState.cpp  MilkState.h  main.cpp  milk.cpp  milk.h
src/math/: Mathf.h  Matrix3.h  Rectangle.h  Vector2.h
src/math/binding/: LuaMathf.cpp  LuaMathf.h  LuaVector2.cpp
src/messenger/: luaopen_milk_messenger.cpp  luaopen_milk_messenger.h  messenger.cpp  messenger.h
src/mouse/: Mouse.h  luaopen_milk_mouse.cpp  luaopen_milk_mouse.h  mouse.cpp  mouse.h
src/mouse/sdl/: SDLMouse.cpp  SDLMouse.h
src/node/: NodeTree.cpp  NodeTree.h  RootNode.cpp  RootNode.h  id.cpp  id.h  node_id.cpp  node_id.h
src/physics/: BoxCollider.cpp  BoxCollider.h  Collision.h  Physics.cpp  Physics.h  SpatialPartitionGrid.cpp  SpatialPartitionGrid.h  Velocity.cpp  Velocity.h
src/physics/binding/: LuaCollision.cpp
src/platform/: sdlplatform.c
src/scene/: Actor.cpp  Actor.h  ActorComponent.h  ActorLoader.h  Actors.cpp  Actors.h  Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneLoader.cpp  SceneManager.cpp  SceneManager.h  Transforms.cpp  Transforms.h
src/scene/adapter/: ActorJsonDeserializer.h  ActorJsonDeserializerV1.cpp  ActorJsonDeserializerV1.h  ActorLoaderAdapter.cpp  ActorLoaderAdapter.h  SceneJsonDeserializer.h  SceneJsonDeserializerV1.cpp  SceneJsonDeserializerV1.h  SceneLoaderAdapter.cpp  SceneLoaderAdapter.h
src/scene/binding/: LuaActor.cpp  LuaActor.h  LuaScene.cpp  LuaScene.h
src/script/: LuaApi.cpp  NodeTemplate.h  ScriptEnvironment.h  lua_extensions.cpp  lua_extensions.h
src/script/api/: LuaWindow.cpp  LuaWindow.h
src/script/lua/: LuaApi.cpp  LuaEnvironment.cpp  LuaEnvironment.h  LuaExtensions.h
src/scripting/: Logic.cpp  Logic.h  LuaApi.cpp  Script.cpp  Script.h
src/scripting/api/: LuaActor.cpp  LuaActor.h  LuaApi.cpp  LuaCollision.cpp  LuaCollision.h  (+4 more)
src/sdl/: sdlmain.c
src/sound/: SoundPlayer.h
src/time/: Time.h  Timer.h  luaopen_milk_time.cpp  luaopen_milk_time.h
src/timer/: Timer.h
src/utilities/: IdGenerator.cpp  IdGenerator.h  Timer.cpp
src/utils/: create_main.c  create_main.h
src/video/: Renderer.h  Texture.cpp  Texture.h  TextureCache.h  Window.h
src/window/: LuaRenderer.cpp  LuaRenderer.h  LuaWindow.cpp  LuaWindow.h  Renderer.h  Window.h  luaopen_milk_window.cpp  luaopen_milk_window.h  window.cpp  window.h
(+223 files in other folders)
